<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SketchPad</string>

    <string name="start_new">New</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="change_background">Change Background</string>
    <string name="take_picture">Take Picture</string>
    <string name="set_wallpaper">Set As Wallpaper</string>
    <string name="action_settings">Settings</string>
    
	<string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
	
    <string name="paint">Paint</string>
    <string name="brush_chooser_pixel_default">0px</string>
    
    <string name="save_dir_name">SketchPad Drawings</string>
    <string name="brush_size">Brush Size</string>
    <string name="brush_weight_desc">Brush Weight</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
	
</resources>