<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/start_new"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:title="@string/save"/>
    <item
        android:id="@+id/menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/share"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item 
        android:id="@+id/menu_set_wallpaper"
        android:showAsAction="never"
        android:title="@string/set_wallpaper"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
