<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background">
    
    <!-- Button Panel -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnDraw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush"/>
        <ImageButton
            android:id="@+id/btnErase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"/>
        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/undo"
            android:src="@drawable/undo"/>
        <ImageButton
            android:id="@+id/btnRedo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/redo"
            android:src="@drawable/redo"/>
    </LinearLayout>
    
    <!-- Drawing Canvas -->
    <com.example.sketchpad.DrawingView 
        android:id="@+id/drawing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/drawingview_margin_topbot"
        android:layout_marginTop="@dimen/drawingview_margin_topbot"
        android:layout_marginLeft="@dimen/drawingview_margin_lr"
        android:layout_marginRight="@dimen/drawingview_margin_lr"
        android:layout_weight="1"
        android:background="@color/white"/>
    
    <!-- Color Palette -->
    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/brown"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/brown"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/red"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/red"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/orange"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/orange"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/yellow"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/yellow"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/green"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/green"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/teal"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/teal"/>
    </LinearLayout>   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/blue"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/blue"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/violet"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/violet"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/pink"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/pink"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/white"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/white"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/gray_palette"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/gray_palette"/>
        <ImageButton
            android:layout_width="@dimen/brush_image_size"
            android:layout_height="@dimen/brush_image_size"
            android:layout_margin="@dimen/colorbutton_margin"
            android:background="@color/black"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="@color/black"/>
    </LinearLayout>
 
</LinearLayout>